Closed Bug 1892647 Opened 2 months ago Closed 2 months ago

Silence from spammy warnings in toolkit/components/antitracking/AntiTrackingUtils.cpp

Categories

(Core :: Privacy: Anti-Tracking, defect)

defect

Tracking

()

RESOLVED FIXED
127 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox125 --- unaffected
firefox126 --- wontfix
firefox127 --- fixed

People

(Reporter: tnikkel, Assigned: tnikkel)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

No description provided.

These warnings print a lot, eg during crashtests. The uris that I was seeing for the documents/channels was about:newtab and data uris.

The specifics of the failure are that the GetBaseDomain call here fails

https://searchfox.org/mozilla-central/rev/863aef60f9fa1536884252ad90cad1d8ee9d8a41/dom/base/ThirdPartyUtil.cpp#347

because there is no base domain of those uris. Specifically, we hit this return

https://searchfox.org/mozilla-central/rev/863aef60f9fa1536884252ad90cad1d8ee9d8a41/dom/base/ThirdPartyUtil.cpp#434

Assignee: nobody → tnikkel
Status: NEW → ASSIGNED

Set release status flags based on info from the regressing bug 1876575

Pushed by tnikkel@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/c5defbd73591
Silence from spammy warnings in toolkit/components/antitracking/AntiTrackingUtils.cpp. r=timhuang,anti-tracking-reviewers
Status: ASSIGNED → RESOLVED
Closed: 2 months ago
Resolution: --- → FIXED
Target Milestone: --- → 127 Branch

The patch landed in nightly and beta is affected.
:tnikkel, is this bug important enough to require an uplift?

  • If yes, please nominate the patch for beta approval.
  • If no, please set status-firefox126 to wontfix.

For more information, please visit BugBot documentation.

Flags: needinfo?(tnikkel)
Flags: needinfo?(tnikkel)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: