Bug 1892647. Silence from spammy warnings in toolkit/components/antitracking/AntiTrackingUtils.cpp. r=timhuang,anti-tracking-reviewers

These warnings print a lot, eg during crashtests. The uris that I was seeing for the documents/channels was about:newtab and data uris.

The specifics of the failure are that the GetBaseDomain call here fails

https://searchfox.org/mozilla-central/rev/863aef60f9fa1536884252ad90cad1d8ee9d8a41/dom/base/ThirdPartyUtil.cpp#347

because there is no base domain of those uris. Specifically, we hit this return

https://searchfox.org/mozilla-central/rev/863aef60f9fa1536884252ad90cad1d8ee9d8a41/dom/base/ThirdPartyUtil.cpp#434

Differential Revision: https://phabricator.services.mozilla.com/D208089